# data-mastor

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  README.rst  SESSION_LOG.md  cliff.toml  pyproject.toml  renovate.json  requirements.txt
.github/: copilot-instructions.md
.github/actions/setup/: action.yml
.github/workflows/: checks.yml  copilot-setup-steps.yml
src/data_mastor/: cli.py  cliutils.py  dbman.py  mastor.py  pyutils.py  utils.py
src/data_mastor/recipes/: rec.py
src/data_mastor/scraper/: middlewares.py  models.py  pipelines.py  schemas.py  spiders.py  testing.py  utils.py
tests/: conftest.py  test_cliutils.py  test_data_mastor.py
tests/recipes/: test_rec.py
tests/scraper/: conftest.py  test_conftest.py  test_middlewares.py  test_pipelines.py  test_response_saver_middleware.py  test_spiders.py  test_testing.py
tests/scraper/pipelines/: conftest.py  test_pipelines.py
tests/scraper/spiders/: conftest.py  test_middlewares.py  test_spiders.py
