[tool.poetry]
name = "data-mastor"
version = "0.1.0"
description = ""
authors = ["Nikolaos Vyzas <nbyzas@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.10" # click does not support 3.11
pandas = "^1.5.3"
scikit-learn = "^1.2.2"
mlflow = "^2.2.2"
ray = "^2.3.1"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"
mypy = "^1.1.1"
pre-commit = "^3.2.1"
pandas-stubs = {version = "^1.5.3.230321", python = ">=3.9,<3.11"}

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"
add_imports = ["from __future__ import annotations"]
append_only = true
#force_single_line = true

[[tool.mypy.overrides]]
module = [
    "sklearn.*",
    "mlflow.*",
]
ignore_missing_imports = true
