[project]
name = "data-mastor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepdiff>=8.6.1",
    "pandas>=2.3.3",
    "psutil>=7.1.1",
    "pyyaml>=6.0.3",
    "scrapy>=2.13.3",
    "sqlalchemy>=2.0.44",
    "typer>=0.20.0",
]


[[tool.mypy.overrides]]
module = [
    "sklearn.*",
    "mlflow.*",
]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pandas-stubs>=2.3.2.250926",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-mock>=3.15.1",
    "pytest-xdist>=3.8.0",
    "ruff>=0.14.1",
    "types-psutil>=7.0.0.20251001",
    "types-pyyaml>=6.0.12.20250915",
]


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
dm = "data_mastor.dbman:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
